--- a/5.md
+++ b/5.md
@@ -16,7 +16,7 @@
 如果想要退出 Proxifier，只需要右键任务栏托盘中的 Proxifier 图标并单击「Exit」即可。
 
 ---
-如果你已经导入了配置文件，那么以下步骤可以全部跳过，如果有需求手动配置 Proxifier，那么按以下步骤操作：
+如果你已经导入了配置文件，那么以下步骤可以全部**跳过**，如果有需求手动配置 Proxifier，那么按以下步骤操作：
 1. 依次选择左上角「Profile」—「Proxy Servers...」  
    ![13](assets/13.png)
 1. 在弹出的对话框中单击「Add...」按钮  
@@ -41,12 +41,12 @@
 1. 在弹出的窗口中依次填入以下内容  
    >Name：随便写  
    >Applications：java.exe  
-   >Target hosts：\*.apache.org; \*.gradle.org; \*.gradle\*.com; \*.minecraft.net; \*.minecraft.net; \*.minecraftforge.net; \*.mojang.com  
+   >Target hosts：\*.apache.org; \*.gradle.org; \*.gradle\*.com; \*.minecraft.net; \*.minecraftforge.net; \*.mojang.com  
    >Action：Proxy HTTPS 127.0.0.1
    
    其余保持默认，然后单击「OK」按钮  
    ![21](assets/21.png)
-1. 然后单击「OK」按钮
+1. 然后单击「OK」按钮  
    ![22](assets/22.png)
 1. 依次选择左上角「Profile」—「Name Resolution...」  
    ![23](assets/23.png)
