--- a/1.md
+++ b/1.md
@@ -1,6 +1,7 @@
 # 下载 Shadowsocks
 
-**单击[此处](https://img.kaiheila.cn/attachments/2022-07/05/62c410ae4ab51.zip)下载 Shadowsocks 4.3.3.170**
+**复制下方链接下载 Shadowsocks 4.3.3.170**  
+https://img.kaiheila.cn/attachments/2022-07/05/62c410ae4ab51.zip
 
 下载后在任意地方全部解压，并双击运行其中的 Shadowsocks.exe 即可（不要直接在压缩软件里双击）。双击运行 Shadowsocks 默认不会弹出任何窗体。
 
