--- a/5.md
+++ b/5.md
@@ -3,7 +3,8 @@
 # 配置 Proxifier
 
 成功启动 Proxifier 之后，可以在此处下载配置文件，然后按以下步骤操作以替换原先 Proxifier 默认的配置文件：  
-1. **单击[此处](https://img.kaiheila.cn/attachments/2022-07/05/62c412f79cd3e.ppx)下载 Proxifier 的配置文件「MinecraftForge.ppx」**
+1. **复制下方链接下载 Proxifier 的配置文件「MinecraftForge.ppx」**  
+   https://img.kaiheila.cn/attachments/2022-07/05/62c412f79cd3e.ppx
 1. 依次选择左上角「File」—「Import Profile...」  
    ![25](assets/25.png)
 1. 在弹出的对话框中单击「是(Y)」按钮  
