Update more cases.

--- a/1.md
+++ b/1.md
@@ -2,6 +2,8 @@
 
 **单击[此处](https://gitee.com/zekerzhayard/minecraft-forge-proxy-tutorial/attach_files/1122222/download/Shadowsocks-4.3.3.170.zip)下载 Shadowsocks 4.3.3.170。**
 
+如果你的操作系统版本低于 Windows 10 1903，可能需要额外安装 .NET Framework 4.8，否则无法正常运行 Shadowsocks，**单击[此处](https://download.visualstudio.microsoft.com/download/pr/2d6bb6b2-226a-4baa-bdec-798822606ff1/8494001c276a4b96804cde7829c04d7f/ndp48-x86-x64-allos-enu.exe)下载 .NET Framework 4.8 安装程序**。
+
 下载后在任意地方全部解压，并双击运行其中的 Shadowsocks.exe 即可（不要直接在压缩软件里双击）。双击运行 Shadowsocks 默认不会弹出任何窗体。
 
 Shadowsocks 4.3.3.170 虽然不是目前的最新版，但是因为代理服务器所用的加密方式是 rc4-md5，而此版本是最后一个支持 rc4-md5 加密方式的版本，所以选这个版本。
