--- a/5.md
+++ b/5.md
@@ -11,7 +11,9 @@
 1. 选择刚刚下载到的「MinecraftForge.ppx」文件，然后单击「打开(O)」按钮
    ![27](assets/27.png)
 
-这样就导入了配置文件，然后按照配置 Minecraft Forge 开发环境的步骤操作即可。
+这样就导入了配置文件。
+
+**最后保持 Shadwosocks 和 Proxifier 都在运行，不要关闭退出它们，就可以开始配置 Minecraft Forge 开发环境了。**
 
 如果想要退出 Proxifier，只需要右键任务栏托盘中的 Proxifier 图标并单击「Exit」即可。
 
