Add downloading jdks for MCreator.

--- a/2.md
+++ b/2.md
@@ -18,7 +18,7 @@
 
    ![2](assets/2.png)   
 
-*此代理服务器只能用于构建 Minecraft Forge 开发环境，并不能访问外国网站。*
+*此代理服务器只能用于构建 Minecraft Mod 开发环境，并不能访问外国网站。*
 
 如果想要退出 Shadowsocks，只需要右键任务栏托盘中的 Shadowsocks 图标并单击「退出」即可。
 
