--- a/5.md
+++ b/5.md
@@ -3,17 +3,17 @@
 # 配置 Proxifier
 
 成功启动 Proxifier 之后，可以在此处下载配置文件，然后按以下步骤操作以替换原先 Proxifier 默认的配置文件：  
-1. **单击[此处](https://gitee.com/zekerzhayard/minecraft-forge-proxy-tutorial/attach_files/1122220/download/MinecraftForge.ppx)下载 Proxifier 的配置文件「MinecraftForge.ppx」**
+1. **单击[此处](https://gitee.com/zekerzhayard/minecraft-forge-proxy-tutorial/attach_files/1137535/download/Minecraft.ppx)下载 Proxifier 的配置文件「Minecraft.ppx」**
 1. 依次选择左上角「File」—「Import Profile...」  
    ![25](assets/25.png)
 1. 在弹出的对话框中单击「是(Y)」按钮  
    ![26](assets/26.png)
-1. 选择刚刚下载到的「MinecraftForge.ppx」文件，然后单击「打开(O)」按钮
+1. 选择刚刚下载到的「Minecraft.ppx」文件，然后单击「打开(O)」按钮
    ![27](assets/27.png)
 
 这样就导入了配置文件。
 
-**最后保持 Shadwosocks 和 Proxifier 都在运行，不要关闭退出它们，就可以开始配置 Minecraft Forge 开发环境了。**
+**最后保持 Shadwosocks 和 Proxifier 都在运行，不要关闭退出它们，就可以开始配置 Minecraft Mod 开发环境了。**
 
 如果想要退出 Proxifier，只需要右键任务栏托盘中的 Proxifier 图标并单击「Exit」即可。
 
@@ -43,7 +43,7 @@
 1. 在弹出的窗口中依次填入以下内容  
    >Name：随便写  
    >Applications：java.exe  
-   >Target hosts：\*.apache.org; \*.gradle.org; \*.gradle\*.com; \*.minecraft.net; \*.minecraftforge.net; \*.mojang.com  
+   >Target hosts：\*.apache.org; \*.fabricmc.net; \*.gradle.org; \*.gradle\*.com; \*.minecraft.net; \*.minecraftforge.net; \*.mojang.com  
    >Action：Proxy HTTPS 127.0.0.1
    
    其余保持默认，然后单击「OK」按钮  
@@ -56,3 +56,5 @@
    ![24](assets/24.png)
 
 这样，Proxifier 就配置完成了。
+
+[>> 下一节：MCreator 需要的额外步骤](6.md)
